--- a/css/style.css
+++ b/css/style.css
@@ -1728,7 +1728,7 @@ img {
 /* 18. Call to Action (CTA) */
 /* cta */
 #cta {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../images/home/APR62776.JPG);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../images/home/APR62776.webp);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
