--- a/css/style.css
+++ b/css/style.css
@@ -579,9 +579,9 @@ img {
 /* Franchise Page Enhancements */
 .hero-graphic-container {
     position: relative;
-    padding: 20px;
-    min-height: 400px;
-    display: flex;
+    width: 100%;
+    max-width: 500px;
+    margin: 0;
     align-items: center;
     justify-content: center;
 }
