--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,28 @@ img {
 }
 
 /* 6. Buttons */
+/* Icon List */
+.icon-list {
+    list-style: none;
+    padding-left: 0;
+    margin-left: 0;
+}
+
+.icon-list li {
+    position: relative;
+    padding-left: 0;
+    margin-bottom: 0.75rem;
+    display: flex;
+    align-items: flex-start;
+    gap: 0.75rem;
+}
+
+.icon-list li i {
+    margin-top: 0.35rem; /* Optical alignment */
+    color: var(--secondary-clr);
+    flex-shrink: 0;
+}
+
 /* buttons */
 
 /* Premium Button Styles */
